minor: move buckets and radius multiplier into the configuration, prepare for launching multiple scenarios

--- a/versions.properties
+++ b/versions.properties
@@ -53,3 +53,5 @@ version.org.scalatestplus..junit-4-13_2.13=3.2.10.0
 version.org.typelevel..cats-core_2.12=2.6.1
 
 version.org.typelevel..cats-core_2.13=2.6.1
+
+version.org.yaml..snakeyaml=1.30
