--- a/src/main/yaml/swapSourceGradient.yml
+++ b/src/main/yaml/swapSourceGradient.yml
@@ -17,6 +17,8 @@ variables:
       learn_ep != 0 && (ep == 0 || ep % each != 0) && ep < learn_ep
   range: &range { formula: 8.0 }
   gamma: &gamma { formula: 0.90 }
+  buckets: &buckets { formula: 2.0 }
+  maxRadiusMultiplier: &maxRadiusMultiplier { formula: 2.0 }
   window_size: &window_size { formula: 2 } ## probably better with windows_size = 3
   trajectory_size: &trajectory_size { formula: 2 }
   right_source: &right_source { formula: 'episode % 2 == 0 ? 0 : 19'}
@@ -31,9 +33,6 @@ _beta: &beta >
   it.unibo.learning.TimeVariable.independent(0.01)
 _epsilon: &epsilon >
   it.unibo.learning.TimeVariable.exponentialDecayFunction(0.05, 40)
-
-_actions: &actions >
-  cats.data.NonEmptySet.of(0, 1, 2)
 
 seeds: { scenario: 0, simulation: 0 } # put episode to make round firing different
 terminate: { type: AfterTime, parameters: [*episode_length] }
@@ -65,8 +64,6 @@ deployments:
         concentration: *beta
       - molecule: epsilon
         concentration: *epsilon
-      - molecule: actions
-        concentration: *actions
       - molecule: window
         concentration: *window_size
       - molecule: trajectory
@@ -77,6 +74,10 @@ deployments:
         concentration: *right_source
       - molecule: episode_length
         concentration: *episode_length
+      - molecule: buckets
+        concentration: *buckets
+      - molecule: maxRadiusMultiplier
+        concentration: *maxRadiusMultiplier
       ###### EXPORT DATA
       - molecule: output_reference
         concentration: 0
