--- a/src/main/yaml/swapSourceGradientRectangle.yml
+++ b/src/main/yaml/swapSourceGradientRectangle.yml
@@ -17,8 +17,6 @@ variables:
       learn_ep != 0 && (ep == 0 || ep % each != 0) && ep < learn_ep
   range: &range { formula: 8.0 }
   gamma: &gamma { formula: 0.90 }
-  buckets: &buckets { formula: 2.0 }
-  maxRadiusMultiplier: &maxRadiusMultiplier { formula: 2.0 }
   window_size: &window_size { formula: 2 } ## probably better with windows_size = 3
   trajectory_size: &trajectory_size { formula: 2 }
   right_source: &right_source { formula: 'episode % 2 == 0 ? 60 : 19'}
@@ -33,6 +31,9 @@ _beta: &beta
   it.unibo.learning.TimeVariable.independent(0.01)
 _epsilon: &epsilon
   it.unibo.learning.TimeVariable.exponentialDecayFunction(0.05, 40)
+
+_buckets: &buckets 2.0
+_maxRadiusMultiplier: &maxRadiusMultiplier 2.0
 
 seeds: { scenario: 0, simulation: 0 } # put episode to make round firing different
 terminate: { type: AfterTime, parameters: [*episode_length] }
