--- a/src/main/yaml/swapSourceGradient.yml
+++ b/src/main/yaml/swapSourceGradient.yml
@@ -3,7 +3,7 @@ incarnation: scafi
 variables:
   # SIMULATION VARIABLE
   last_greedy_episodes: { formula: 2.0 }
-  learning_episodes: { formula: 42.0 }
+  learning_episodes: { formula: 45.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
   greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
@@ -17,22 +17,25 @@ variables:
       learn_ep != 0 && (ep == 0 || ep % each != 0) && ep < learn_ep
   range: &range { formula: 8.0 }
   gamma: &gamma { formula: 0.90 }
-  buckets: &buckets { formula: 2.0 }
-  maxRadiusMultiplier: &maxRadiusMultiplier { formula: 2.0 }
   window_size: &window_size { formula: 2 } ## probably better with windows_size = 3
   trajectory_size: &trajectory_size { formula: 2 }
   right_source: &right_source { formula: 'episode % 2 == 0 ? 0 : 19'}
   left_source: &left_source { formula: 'episode % 2 == 0 ? 19 : 0' }
   # PROGRAM VARIABLES
   stop_right_source: &stop_right_source { formula: 35 }
+  buckets: &buckets { formula: 2.0 }
+  maxRadiusMultiplier: &maxRadiusMultiplier { formula: 2.0 }
 
 ## Time variables
-_alpha: &alpha
+_alpha: &alpha >
   it.unibo.learning.TimeVariable.independent(0.1)
-_beta: &beta
+_beta: &beta >
   it.unibo.learning.TimeVariable.independent(0.01)
-_epsilon: &epsilon
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.05, 40)
+_epsilon: &epsilon >
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.5, 10)
+
+_actions: &actions >
+  cats.data.NonEmptySet.of(0, 1, 2)
 
 seeds: { scenario: 0, simulation: 0 } # put episode to make round firing different
 terminate: { type: AfterTime, parameters: [*episode_length] }
@@ -64,6 +67,8 @@ deployments:
         concentration: *beta
       - molecule: epsilon
         concentration: *epsilon
+      - molecule: actions
+        concentration: *actions
       - molecule: window
         concentration: *window_size
       - molecule: trajectory
