--- a/src/main/plot/swapSource.yml
+++ b/src/main/plot/swapSource.yml
@@ -26,9 +26,9 @@ default_colors: &default_colors ["black", "black", "red","darkgreen","gold",
 the_plots_colors:
   - *default_colors
 legend_position:
-  - "upper right"
-  - "upper right"
-legend_size: 12
+  - "upper left"
+  - "upper left"
+legend_size: 10
 force_limit_plot_y:
 #  1: 140
 #   3: 1000
