--- a/src/main/plot/swapSource.yml
+++ b/src/main/plot/swapSource.yml
@@ -23,23 +23,30 @@ line_widths:
 default_colors: &default_colors ["black", "black", "red","darkgreen","gold",
                                  "orchid", "teal", "darkviolet",
                                  "darkorchid", "navy", "cyan", "brown", "yellow", "gray", "magenta"]
+y_labels:
+  - 'index value'
+
 the_plots_colors:
   - *default_colors
 legend_position:
-  - "upper left"
-  - "upper left"
-legend_size: 10
-force_limit_plot_y:
-#  1: 140
-#   3: 1000
-#  4: 35
-#  0: 40
-#  3: 80
+  - "upper right"
+  - "upper right"
+legend_size: 12
 start_plot_x:
   0: 90
 force_limit_plot_x:
 #  0: 820
 #  1: 800
 #  3: 800
-title_prefix: ''
-#excluded_titles: [0]
+sampling:
+  - False
+samplingField:
+  - episode
+
+title_prefix: 'Internal metrics'
+excluded_titles:
+  - []
+line_styles:
+  - [ 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid',
+      'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid' ]
+format: "pdf"
