--- a/src/main/plot/swapSourceSampling.yml
+++ b/src/main/plot/swapSourceSampling.yml
@@ -30,18 +30,18 @@ legend_position:
   - "upper left"
 legend_size: 12
 force_limit_plot_y:
-#  1: 140
-#   3: 1000
-#  4: 35
-#  0: 40
-#  3: 80
 start_plot_x:
   0: 90
 force_limit_plot_x:
-#  0: 820
-#  1: 800
-#  3: 800
-title_prefix: ''
-#excluded_titles: [0]
-sampling: true
-samplingField: episode
+sampling:
+  - True
+samplingField:
+  - episode
+
+title_prefix: 'Internal metrics'
+excluded_titles:
+  - []
+line_styles:
+  - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid',
+     'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
+format: "pdf"
